# stock-metrics

./: .env  .gitignore  Cargo.toml  README.md  sample.env
.github/workflows/: annual-build.yml
local-middleware/: docker-compose.yaml
migrations/: up.sql
stock-metrics-adapter/: Cargo.toml
stock-metrics-adapter/migrations/2021-12-17-220257_create_stock/: down.sql  up.sql
stock-metrics-adapter/src/: lib.rs  modules.rs
stock-metrics-adapter/src/model/: market_kind.rs  mod.rs
stock-metrics-adapter/src/model/market_kind/: mod.rs
stock-metrics-adapter/src/model/stock/: mod.rs
stock-metrics-adapter/src/persistence/: dynamodb.rs  mod.rs  mysql.rs
stock-metrics-adapter/src/repository/: health_check.rs  market_data.rs  market_kind.rs  mod.rs  stock.rs
stock-metrics-app/: Cargo.toml
stock-metrics-app/src/: lib.rs
stock-metrics-app/src/model/: market_data.rs  market_kind.rs  mod.rs  stock_view.rs
stock-metrics-app/src/model/market_kind/: mod.rs
stock-metrics-app/src/model/stock/: mod.rs
stock-metrics-app/src/model/stock_view/: mod.rs
stock-metrics-app/src/usecase/: health_check.rs  market_data.rs  market_kind.rs  mod.rs  stock.rs  stock_view.rs
stock-metrics-app/src/usecase/health_check/: mod.rs
stock-metrics-app/src/usecase/market_kind/: mod.rs
stock-metrics-app/src/usecase/stock/: mod.rs
stock-metrics-app/src/usecase/stock_view/: mod.rs
stock-metrics-driver/: Cargo.toml
stock-metrics-driver/src/: lib.rs
stock-metrics-driver/src/context/: axum_helper.rs  errors.rs  mod.rs  validate.rs
stock-metrics-driver/src/model/: market_data.rs  market_kind.rs  mod.rs  stock_view.rs
stock-metrics-driver/src/model/market_kind/: mod.rs
stock-metrics-driver/src/model/stock/: mod.rs
stock-metrics-driver/src/model/stock_view/: mod.rs
stock-metrics-driver/src/module/: mod.rs
stock-metrics-driver/src/routes/: health.rs  market_data.rs  market_kind.rs  mod.rs  stock_view.rs
stock-metrics-driver/src/startup/: mod.rs
stock-metrics-kernel/: Cargo.toml
stock-metrics-kernel/src/: lib.rs
stock-metrics-kernel/src/model/: market_data.rs  mod.rs  stock.rs
stock-metrics-kernel/src/model/market_data/: mod.rs
stock-metrics-kernel/src/model/market_kind/: mod.rs  value.rs
stock-metrics-kernel/src/model/stock/: market_kind.rs  mod.rs  ticker_symbol.rs
stock-metrics-kernel/src/repository/: market_data.rs  market_kind.rs  mod.rs  modules.rs  stock.rs
stock-metrics-kernel/src/repository/market_kind/: mod.rs
stock-metrics-kernel/src/repository/stock/: mod.rs
