[package]
name = "stock-metrics-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stock-metrics-kernel = { path = "../stock-metrics-kernel" }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
anyhow = "1.0.44"
once_cell = "1.8.0"
tokio = { version = "1.12.0", features = ["rt", "macros", "test-util"] }
async-trait = "0.1.51"
chrono = "0.4.19"
