[package]
name = "stock-metrics-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stock-metrics-kernel = { path = "../stock-metrics-kernel" }
stock-metrics-adapter = { path  = "../stock-metrics-adapter" }
derive-new = "0.5.9"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.44"
chrono = "0.4.19"
