[package]
name = "stock-metrics-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stock-metrics-kernel = { path = "../stock-metrics-kernel" }
stock-metrics-app = { path = "../stock-metrics-app" }
stock-metrics-adapter = { path = "../stock-metrics-adapter" }
axum = { version = "0.4.3", features = ["multipart"] }
tokio = { version = "1.12.0", features = ["rt", "macros", "test-util"] }
serde = { version = "1.0.130", features = ["derive"] }
derive-new = "0.5.9"
anyhow = "1.0.44"
futures = { version = "0.3.17", features = ["executor"] }
validator = { version = "0.14.0", features = ["derive"] }
http-body = "0.4.3"
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
csv = "1.1.6"
