[package]
name = "stock-metrics-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
derive-new = "0.5.9"
anyhow = "1.0.44"
async-trait = "0.1.51"
uuid = { verison = "0.8.2", features = ["v4"] }
